syntax = "proto3";
option csharp_namespace = "Discount.Grpc";
package discount;

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CoupanModel);
	rpc CreateDiscount (CreteDiscountRequest) returns (CoupanModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CoupanModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string productName = 1;
}

message CoupanModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreteDiscountRequest {
	CoupanModel coupan = 1;
}

message UpdateDiscountRequest {
	CoupanModel coupan = 1;
}

message DeleteDiscountRequest {
	string productName = 1; 
}

message DeleteDiscountResponse {
	bool success = 1;
}